<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project_Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Lights">Lights</string>
    <string name="Doors">Doors</string>
    <string name="Televisions">Televisions</string>
    <string name="Motor_Controls">Motor Controls</string>
    <string name="Settings">Settings</string>
    <string name="SerialViewer">Serial Viewer</string>
    <string name="Mqtt">Mqtt</string>
    <string name="title_activity_lights">Lights</string>
    <string name="lightSwitch1">Light One:</string>
    <string name="lightSwitch2">Light Two:</string>
    <string name="lightSwitch3">Light Three:</string>
    <string name="lightSwitch4">Light Four:</string>
    <string name="lightSwitch5">Light Five:</string>
    <string name="mainEntranceDoor">Main Door</string>
    <string name="open">Open</string>
    <string name="televisionMessage">Please connect compatible hardware to control televisions</string>
    <string name="curtain">Curtain</string>
    <string name="others">Shortcuts</string>
    <string name="chat">Chat</string>
    <string name="altium">Altium</string>
    <string name="chrome">Chrome</string>
    <string name="showDesktop">Show Desktop</string>
    <string name="shutDownTextView01">Please Enter Your Password</string>
    <string name="shutDown">Shutdown</string>
    <string name="shutDownEditText01"></string>
    <string name="shutDownButton01">Shutdown</string>
    <string name="shutDownButton02">Shutdown Abort</string>
    <string name="shutDownButton03">Restart</string>
    <string name="shutDownButton04">Hibernate</string>
    <string name="shutDownButton05">WakeUp</string>
    <string name="serialViewerDefaultText">Sync to use Serial Viewer\n</string>
    <string name="mqttDefaultText">MQTT Viewer\n</string>
    <string name="textViewSync">Sync</string>
    <string name="updateRate">Update Rate</string>
    <string name="editTextdefault">1000</string>
    <string name="textViewUnit">mS</string>
    <string name="ipAddressSettings">Enter Server Socket</string>
    <string name="defaultIp">192.168.x.x</string>
    <string name="settingsButton1">Apply</string>
    <string name="chatDefaultEditText">Type a message</string>
    <string name="title_activity_doors">Doors</string>
    <string name="title_activity_televisions">Televisions</string>
    <string name="title_activity_motor__controls">Motor Controls</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_motor_controls">Motor Controls</string>
    <string name="title_activity_others">Others</string>
    <string name="title_activity_shut_down">ShutDown</string>
    <string name="title_activity_serial_viewer">SerialViewer</string>
    <string name="openSiteEditor">Open SiteEditor</string>
    <string name="action_password">Password</string>
    <string name="openSiteEditorButton01Text">Send</string>
    <string name="settingsSwitch1">Nagle Algorithm</string>
    <string name="settingsSwitch2">Re-use Address</string>
    <string name="settingsSwitch3">Mqtt Enable</string>
    <string name="settingsSwitch4">Run Service in Background</string>
    <string name="defaultMqttIp">m2m.eclipse.org</string>
    <string name="settingsTextView4">Enter Mqtt Broker Address</string>
    <string name="title_activity_open_site_editor">OpenSiteEditor</string>
    <string name="title_activity_mqtt">Mqtt</string>
    <string name="title_activity_chat">Chat</string>

</resources>
